# vtc

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md  cbindgen.toml  vtc.hxx
benches/: vtc_benchmarks.rs
c/: example_program.c  vtc_runtime.h
config/: include.vtc  info.vtc  linked-list.vtc  nums.vtc  pointers.vtc  really_long_vtc_file.vtc  strings.vtc  values.vtc  vtc.icls
config/color/: vtc.xml
config/examples/: assignment_error.vtc  values.vtc
config/examples/errors/: tag.vtc
samples/: intrinsics.vtc  large_config.vtc  network_config.vtc  system.vtc
src/: cffi.rs  cli.rs  ffi.rs  lib.rs  main.rs  token.rs  value.rs
src/internals/: container.rs  memory.rs
src/parser/: ast.rs  grammar.rs  lexer.rs  mod.rs
src/runtime/: error.rs  memory.rs  mod.rs  runtime.rs  serialize.rs  std.rs  utils.rs
src/serializer/: mod.rs  parser.rs  token.rs  types.rs
src/serializer/config/: vtc.pest
tests/: cffi_tests.cxx  inherit_directive.vtc  parser_test.rs  pointers_test.rs  read_pair.vtc  runtime_test.rs  test_comments.rs  test_custom_functions.rs  test_dump_to_file.rs  test_if.rs  test_intrinsic.rs  test_lexer.rs  test_modifiers.rs  test_runtime.rs  test_selective_dump_to_file.rs  test_visual_print.rs  vtc_config.vtc
