[package]
name = "vtc"
version = "0.1.0"
edition = "2021"

[lib]
name = "vtc"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.89"
nom = "7.1.3"
thiserror = "1.0.63"
smallvec = "1.10.0"
lasso = "0.7.3"
rustc-hash = "2.0.0"
libc = "0.2.159"
errno = "0.3.9"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.0"
insta = "1.26"

[[bench]]
name = "vtc_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
