[package]
name = "vtc"
version = "0.1.1"
authors = ["Dhruv Patel"]
edition = "2021"
description = "A VTC (Virtual Typed Configuration) parser and runtime"
license = "MIT"
repository = "https://github.com/dpyte/vtc"
readme = "README.md"
keywords = ["configuration", "parser", "runtime"]
categories = ["parsing", "config"]

[lib]
name = "vtc"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.89"
nom = "7.1.3"
thiserror = "1.0.63"
smallvec = "1.10.0"
rustc-hash = "2.0.0"
libc = "0.2.159"
errno = "0.3.9"
rand = "0.8.5"
sha2 = "0.10.8"
base64 = "0.22.1"
itertools = "0.13.0"
log = { version = "0.4.22", features = [] }

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.0"
insta = "1.26"

[[bench]]
name = "vtc_benchmarks"
harness = false

[profile.dev]
opt-level = 1
debug = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
