[package]
name = "vtc"
version = "0.1.1"
authors = ["Dhruv Patel"]
edition = "2021"
description = "A VTC (Virtual Typed Configuration) parser and runtime"
license = "MIT"
repository = "https://github.com/dpyte/vtc"
readme = "README.md"
keywords = ["configuration", "parser", "runtime"]
categories = ["parsing", "config"]

[lib]
name = "vtc"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
nom = { version = "7.1.3" }
anyhow = "1.0.94"
thiserror = "2.0.6"
smallvec = { version = "1.13.2", features = ["const_generics", "const_new"] }
sha2 = { version = "0.10.8", default-features = false }
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
fnv = "1.0.7"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
proptest = { version = "1.0", default-features = false, features = ["std"] }
insta = { version = "1.26", default-features = false }
tempfile = "3.14.0"
rand = "0.8.5"

[[bench]]
name = "vtc_benchmarks"
harness = false
path = "benches/vtc_benchmarks.rs"

[profile.dev]
opt-level = 1
debug-assertions = true
debug = true

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = 2
